# GenericGameName

./: .gitignore  CMakeLists.txt
assets/: Stylized_window.glb
assets/Door3dModel/: Door.fbx
include/glad/: gl.h
src/: AssetManager.cpp  AssetManager.h  Collision.cpp  Collision.h  GameState.h  Maze.cpp  Maze.h  MazeRenderer.cpp  MazeRenderer.h  Model.cpp  Model.h  Overlay.cpp  Overlay.h  ParticleSystem.cpp  ParticleSystem.h  PostProcessor.cpp  PostProcessor.h  TextureLoader.cpp  TextureLoader.h  main.cpp
